[package]
name = "proxy-rs"
version = "0.1.0"
authors = ["Mike Zeller <mike@mikezeller.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.4",  features = ["attributes"] }
chrono = "0.4"
futures = "0.3"
structopt = "0.3"
